--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,11 +24,14 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.26.1",
+    "react-native-picker-select": "^7.0.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-select-picker": "0.0.3",
     "react-native-svg": "11.0.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-select-picker": "0.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
